docs-archive/apache-airflow-providers-google/19.0.0/_sources/_api/airflow/providers/google/cloud/operators/gen_ai/index.rst.txt
airflow.providers.google.cloud.operators.gen_ai
===============================================

.. py:module:: airflow.providers.google.cloud.operators.gen_ai

.. autoapi-nested-parse::

   This module contains Google Gen AI operators.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.operators.gen_ai.GenAIGenerateEmbeddingsOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAIGenerateContentOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAISupervisedFineTuningTrainOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAICountTokensOperator
   airflow.providers.google.cloud.operators.gen_ai.GenAICreateCachedContentOperator


Module Contents
---------------

.. py:class:: GenAIGenerateEmbeddingsOperator(*, project_id, location, model, contents, config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Uses the Gemini AI Embeddings API to generate embeddings for words, phrases, sentences, and code.

   :param project_id: Required. The ID of the Google Cloud project that the
       service belongs to (templated).
   :param location: Required. The ID of the Google Cloud location that the
       service belongs to (templated).
   :param model: Required. The name of the model to use for content generation,
       which can be a text-only or multimodal model. For example, `gemini-pro` or
       `gemini-pro-vision`.
   :param contents: Optional. The contents to use for embedding.
   :param config: Optional. Configuration for embeddings.
   :param gcp_conn_id: Optional. The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional. Service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'contents', 'model', 'config')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: contents


   .. py:attribute:: config
      :value: None



   .. py:attribute:: model


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAIGenerateContentOperator(*, project_id, location, contents, model, generation_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Generate a model response based on given configuration. Input capabilities differ between models, including tuned models.

   :param project_id: Required. The ID of the Google Cloud project that the
       service belongs to (templated).
   :param location: Required. The ID of the Google Cloud location that the
       service belongs to (templated).
   :param model: Required. The name of the model to use for content generation,
       which can be a text-only or multimodal model. For example, `gemini-pro` or
       `gemini-pro-vision`.
   :param contents: Required. The multi-part content of a message that a user or a program
       gives to the generative model, in order to elicit a specific response.
   :param generation_config: Optional. Generation configuration settings.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('generation_config', 'location', 'project_id', 'impersonation_chain', 'contents', 'model')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: contents


   .. py:attribute:: generation_config
      :value: None



   .. py:attribute:: model


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAISupervisedFineTuningTrainOperator(*, project_id, location, source_model, training_dataset, tuning_job_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create a tuning job to adapt model behavior with a labeled dataset.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param source_model: Required. A pre-trained model optimized for performing natural
       language tasks such as classification, summarization, extraction, content
       creation, and ideation.
   :param training_dataset: Required. Cloud Storage URI of your training dataset. The dataset
       must be formatted as a JSONL file. For best results, provide at least 100 to 500 examples.
   :param tuning_job_config: Optional. Configuration of the Tuning job to be created.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'training_dataset', 'tuning_job_config',...



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: source_model


   .. py:attribute:: training_dataset


   .. py:attribute:: tuning_job_config
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAICountTokensOperator(*, project_id, location, contents, model, config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Use Count Tokens API to calculate the number of input tokens before sending a request to Gemini API.

   :param project_id: Required. The ID of the Google Cloud project that the
       service belongs to (templated).
   :param location: Required. The ID of the Google Cloud location that the
       service belongs to (templated).
   :param contents: Required. The multi-part content of a message that a user or a program
       gives to the generative model, in order to elicit a specific response.
   :param model: Required. Model, supporting prompts with text-only input,
       including natural language tasks, multi-turn text and code chat,
       and code generation. It can output text and code.
   :param config: Optional. Configuration for Count Tokens.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'contents', 'model', 'config')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: contents


   .. py:attribute:: model


   .. py:attribute:: config
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: GenAICreateCachedContentOperator(*, project_id, location, model, cached_content_config = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create CachedContent resource to reduce the cost of requests that contain repeat content with high input token counts.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param location: Required. The ID of the Google Cloud location that the service belongs to.
   :param model: Required. The name of the publisher model to use for cached content.
   :param cached_content_config: Optional. Configuration of the Cached Content.
   :param gcp_conn_id: The connection ID to use connecting to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('location', 'project_id', 'impersonation_chain', 'model', 'cached_content_config')



   .. py:attribute:: project_id


   .. py:attribute:: location


   .. py:attribute:: model


   .. py:attribute:: cached_content_config
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



